--- a/eternal-global/mobile application/flutter_application_1/android/app/src/main/AndroidManifest.xml
+++ b/eternal-global/mobile application/flutter_application_1/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
         android:icon="@mipmap/ic_launcher">
         
           <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="AIzaSyADo8tUSZBwHuIeeS7Y3k-mE_TYb5UANMQ"/>
+               android:value="WRİTE YOUR APİ KEY YOURSELF"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
